@@ -46,6 +46,7 @@ Changes from versions 3.1.* to version 3.2.0:
 - Dropped K&R C compatibility.
 - Improved MPFR manual.
 - New MPFRbench program (see the tools/bench directory).
+- Speedup in the mpfr_const_euler function (contributed by Fredrik Johansson).
 - Bug fixes. In particular, a speed improvement when the --enable-assert
   or --enable-assert=full configure option is used with GCC.
 
